Thu Apr 14 22:48:03 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit::Runner#jobs_status): io/console may
	  not be available. use 80 as the last resort if IO#winsize and
	  COLUMNS are unavailable.

	* lib/test/unit.rb (Test::Unit::Runner::Worker#died): rename using a
	  verb.

	* lib/test/unit.rb (Test::Unit::Runner#_run_parallel): check if worker
	  is signaled and use its exit status.

	* lib/test/unit.rb (Test::Unit::Runner::Worker#dead): no longer @in
	  and @out are separated.

Thu Apr 14 21:23:29 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_autoload_p): search superclasses as same as actual
	  loading.  fixes [ruby-core:35679]

Thu Apr 14 21:21:06 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (frexp, modf): wrongly declared as pure in
	  mingw math.h.

	* include/ruby/win32.h (ftruncate, truncate): mingw64 misses
	  prototypes.

	* win32/win32.c (rb_w32_read): suppress warning.

Thu Apr 14 19:55:54 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/fileutils.rb (FileUtils#touch): fix corrupted output when
	  FileUtils.touch(:nocreate => true, :verbose => true) case.
	  The patch was written by Hiroyuki Iwatsuki. [ruby-dev:43401]

Thu Apr 14 16:01:45 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* io.c (rb_f_syscall): reduce warning: "HAVE___SYSCALL" is not defined.

Thu Apr 14 00:41:09 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* thread.c (thread_fd_close_i): IOError exception should be assigned
	  to rb_thread_t::thrown_errinfo.

Wed Apr 13 20:12:26 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* io.c (rb_io_fdatasync): remove unused variable.

Tue Apr 12 20:54:12 2011  Tanaka Akira  <akr@fsij.org>

	* include/ruby/st.h: parenthesize macro arguments.

Tue Apr 12 19:19:50 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb: avoid race condition. fixes #4572

Tue Apr 12 18:07:13 2011  TAKAO Kouji  <kouji@takao7.net>
